<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="Typos">TechFind</string>
    <string name="email">Correo Electrónico</string>
    <string name="password">Contraseña</string>
    <string name="repeat_password">Repita su contraseña</string>
    <string name="register">Registrarse</string>
    <string name="regist">REGISTRO</string>
    <string name="type">Tipo de documento:</string>
    <string name="cedula">Cedula</string>
    <string name="passport">Pasaporte</string>
    <string name="ti">Tarjeta de identidad</string>
    <string name="document">Documento</string>
    <string name="number">Número de Teléfono</string>
    <string name="logo">LOGO</string>
    <string name="name">Nombre completo</string>
    <string name="login">Iniciar sesión</string>
    <string name="not_have_account">¿No tiene cuenta? Registrarse</string>
    <string name="sign_out">Cerrar sesión</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_categories">Categorías</string>
    <string name="title_services">Mis servicios</string>
    <string name="title_schedule">Agenda</string>
    <string name="title_profile">Perfil</string>
    <string name="title_deleteservice">Eliminar servicio</string>
    <string name="title_addservices">Añadir servicio</string>
    <string name="AddButton" />
    <string name="ServiceTextView">Añadir servicio</string>
    <string name="ProfileTextView">Editar Perfil</string>
    <string name="category">Categoría:</string>
    <string name="editname">Editar Nombre</string>
    <string name="editemail">Editar Correo</string>
    <string name="editpassword">Editar Contraseña</string>
    <string name="editdocument">Editar Documento</string>
    <string name="editnumber">Editar Número de teléfono</string>
    <string name="long_description">Descripción detallada:</string>
    <string name="short_description">Breve descripción:</string>
    <string name="service_price">Precio del servicio:</string>
    <string name="years_experience">Años de experiencia::</string>
    <string name="save">Guardar</string>
    <string name="search">Buscar</string>
    <string name="example_category">Limpieza</string>
    <string name="warning_title">Advertencia</string>
    <string name="delete_service_msg">¿Desea eliminar el servicio %s?</string>
    <string name="cancel">Cancelar</string>
    <string name="accept">Aceptar</string>
    <string name="update">Actualizar</string>
    <string name="example_short_description">Más de 10 años de experiencia en el sector de la limpieza, estoy dispuesto a ofrecer mis servicios</string>
    <string name="category_title">Categoria</string>
    <string name="category_laundry">Lavandería</string>
    <string name="category_carpentry">Carpintería</string>
    <string name="category_locksmith">Cerrajería</string>
    <string name="category_pestcontrol">Control de plagas</string>
    <string name="category_electrician">Electricista</string>
    <string name="category_plumbing">Plomería</string>
    <string name="category_cleaning">Limpieza</string>
    <string name="category_select">Seleccione una categoría</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Paint">Pintura</string>
    <string name="category_paint">Pintura</string>
    <string name="category_mechanic">Mecanico</string>
    <string-array name="categories_array">
        <item>Lavanderia</item>
        <item>Carpinteria</item>
        <item>Cerrajeria</item>
        <item>Control de plagas</item>
        <item>Electricista</item>
        <item>Plomeria</item>
        <item>Limpieza</item>
        <item>Pintura</item>
        <item>Mecanico</item>
    </string-array>
</resources>