<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.techfind.myapplication.ui.bottom.ui.home.HomeFragment"
        android:label="@string/title_categories"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/servicesFragment"
        android:name="com.techfind.myapplication.ui.services.ServicesFragment"
        android:label="@string/title_services"
        tools:layout="@layout/services_fragment" >
        <action
            android:id="@+id/action_servicesFragment_to_addServiceFragment"
            app:destination="@id/addServiceFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.techfind.myapplication.ui.bottom.ui.notifications.NotificationsFragment"
        android:label="@string/title_schedule"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/addServiceFragment"
        android:name="com.techfind.myapplication.ui.addservices.AddServiceFragment"
        android:label="AddServiceFragment" >
        <action
            android:id="@+id/action_addServiceFragment_to_servicesFragment"
            app:destination="@id/servicesFragment" />
    </fragment>
</navigation>